--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,73 @@
     gap: 5px;
     color: rgb(48, 48, 48);
 }
+
+/* contect style */
+
+.contect-me {
+    margin: 30px 0 0 0;
+}
+
+.contect {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    position: relative;
+    border: none;
+    font-size: 14px;
+    font-family: inherit;
+    color: #fff;
+    width: 150px;
+    height: 40px;
+    gap: 5px;
+    line-height: 2em;
+    text-align: center;
+    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background-size: 300%;
+    border-radius: 30px;
+    z-index: 1;
+    align-items: center;
+}
+
+.contect:hover {
+    animation: ani 8s linear infinite;
+    border: none;
+}
+
+@keyframes ani {
+    0% {
+        background-position: 0%;
+    }
+
+    100% {
+        background-position: 400%;
+    }
+}
+
+.contect:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background-size: 400%;
+    border-radius: 35px;
+    transition: 1s;
+}
+
+.contect:hover::before {
+    filter: blur(20px);
+}
+
+.contect:active {
+    background: linear-gradient(32deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+}
+
+
+.about-content {
+    color: white;
+}
