--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
 /* profile style */
 
-.profile{
+.profile-container{
     display: flex;
     min-height: 80vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
 }
@@ -83,4 +92,42 @@
 
 .about-content {
     color: white;
+}
+
+/* skills & Tools style */
+
+.skill-tools-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.skill-tools-title-container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-tools-image-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+}
+
+.skill-tools-image-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    gap: 10px;
+}
+
+.iconImage{
+    width: 120px;
+    height: 120px;
 }
