--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
   font-size: large;
   cursor: pointer;
 }
+
+@media screen and (max-width:300px){
+  .navigation{
+    background-color: red;
+  }
+} 
