added menu items

--- a/src/index.css
+++ b/src/index.css
@@ -181,11 +181,18 @@
     display: none;
 }
 
+.menu-icon{
+    display: none;
+}
+
 @media (max-width:500px){
     .link{
         display: none;
     }
     .themebutton{
         display: none;
+    }
+    .menu-icon{
+        display: block;
     }
 }
