--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,17 @@
 .blog-container{
   min-height: 100vh;
 }
+
+.blog-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-title{
+  display: flex;
+  height: 200px;
+  align-items: center;
+  justify-content: center;
+  background-color: dodgerblue;
+}
+
