--- a/src/index.css
+++ b/src/index.css
@@ -200,4 +200,10 @@
     .menu-icon{
         display: block;
     }
+    .nodejsintro{
+        height: 200px;
+        width: 250px;
+    }
 }
+
+
