--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
+  gap: 20px;
 }
 
 .node-steps{
@@ -77,6 +78,20 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+}
+
+.Git-localSetup-container{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-gitLocalSetup-title{
+  display: flex;
+  height: 200px;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
 }
 
 @media (max-width:500px){
